[package]
name = "rping"
version = "0.1.0"
authors = ["Levon Tarver <ask.levon@gmail.com>"]
edition = "2021"
description = "Pings a target via a remote device"
license = "MIT"
repository = "https://github.com/internet-diglett/rping"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.8"
regex = "1"
ssh2 = "0.9.3"
